BXC-4982 refine logic and tests